--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<nav>
 			<a target="_blank" href="class0/class0.html">前言</a><br />
 			<a target="_blank" href="class1/class1结构及基础标签.html">第一节：html结构及基础标签</a><br />
-			<a target="_blank" href="">第一节</a><br />
-			<a target="_blank" href="">第一节</a><br />
-			<a target="_blank" href="">第一节</a><br />
-			<a target="_blank" href="">第一节</a><br />
-			<a target="_blank" href="">第一节</a><br />
+			<a target="_blank" href="">第二节</a><br />
+			<a target="_blank" href="">第三节</a><br />
+			<a target="_blank" href="">第四节</a><br />
+			<a target="_blank" href="">第五节</a><br />
+			<a target="_blank" href="">第六节</a><br />
 		</nav>
 		</div>
 		
