--- a/class0/class0.html
+++ b/class0/class0.html
@@ -17,7 +17,15 @@
 		<!-- 主体 -->
 		<div>
 		<section>
-		<h1>前言：什么是HTML？</h1>
+			<h1>前言</h1>
+			<p>在这信息爆炸的互联网时代，人们都几乎对浏览器不离不弃，时不时上网冲浪。<br /></p>
+			<p>你每次看到不同的网页，可能你都会惊讶，会想“这是怎么做到的？”<br /></p>
+			<p>但当你在这个网页按下F12后，屏幕右边会出现一个窗口(即开发者工具)，窗口里面出现了一大堆看不懂的用方括号括住的英语单词，而且里面都有着跟网页相似的文本，这时的你大受震撼，心想：这是怎么回事呢？<br /></p>
+			<p>其实这些与我们现在所学的语言，<b>HTML</b>有很大的联系。<br />
+			想知道HTML是什么？接着看下去：
+			</p>
+			<hr />
+		<h3>什么是HTML？</h3>
 		<p><abbr title="Hyper Text Markup Language"><b>HTML</b></abbr>的全称为超文本标记语言(<b>H</b>yper <b>T</b>ext <b>M</b>arkup <b>L</b>anguage)，是一种<b>标记语言</b>。<br />它包括一系列标签．通过这些标签可以将网络上的文档格式统一，使分散的Internet资源连接为一个逻辑整体。<br />HTML文本是由HTML命令组成的描述性文本，HTML命令可以说明文字，图形、动画、声音、表格、链接等。</p>
 		<div style="float: right;">
 		<q>-取自<a href="https://baike.baidu.com/item/HTML/97049?fr=aladdin" target="_blank" >百度百科</a>-</q>
@@ -25,7 +33,7 @@
 		<hr />
 
 		<div>
-		<h2>标记语言与编程语言的区别</h2>
+		<h3>标记语言与编程语言的区别</h3>
 		<p>
 <b>编程语言：</b>简单来说，编程语言是一组指令或代码，它们告诉计算机它需要做什么。因此，基本上，我们向计算机提供逻辑或指令以执行某些任务，以从计算机获取所需的输出。当我们需要写CD或刻录CD或需要在笔式驱动器中粘贴某些东西时，所有这些指令都是通过某些涉及某些指令或代码集的软件给出的，并且该软件可以与硬件通信。编程语言是高级语言，由于计算机只能理解机器级语言或二进制语言（0和1），因此需要将其转换为机器级语言。因此，我们以易于阅读的形式编写了指令，然后单击编译按钮将其转换为计算机可以理解的机器级语言，然后计算机执行任务。此转换由编译器完成，编译器一次性扫描完整的代码，如果发现任何错误，则会立即引发错误。例子是Java，C，C++，C＃。编程语言最广泛地用于制作软件或驱动程序。<br />
 <br />
@@ -37,16 +45,17 @@
 		<hr />
 		
 			<div>
-			<h2>我为什么要学HTML？</h2>
-<p>因为这是建设网站（或者叫设计网站）的基础中的基础（也包括css和JavaScript）。<br />
-也许你可能会问：啊？为什么不教我们Python而是HTML呢？而且为什么不教我们css呢？<br />
-因为浏览器只识别HTML的标签，而css是作为它的“辅助”，改变它的样式，让网页更加生动，就像你现在看到的一样（指字体）<br />
-不过不必担心，之后会教部分css的（Javascript先不去学了（连我都不会XDD），有兴趣可以去自学，之后会涉及一小部分）</p>
+			<h3>我为什么要学HTML？</h3>
+<p>因为这是建设网站（或者叫设计网站）的基础中的基础（也包括css和JavaScript）。<br /><br />
+也许你可能会问：啊？为什么不教我们Python而是HTML呢？而且为什么不教我们css呢？<br /><br />
+1、因为这个人没学Python(其实这两种语言学起来差不多，就是HTML相对于Python是比较容易的吧)<br /><br />
+2、因为浏览器只识别HTML的标签，而css是作为它的“辅助”，改变它的样式，让网页更加生动，就像你现在看到的一样（指字体）<br />
+不过不必担心，之后会涉及部分css知识的（Javascript先不去学了（连我都不会XDD），有兴趣可以去自学，之后会涉及一小部分）</p>
 		</div>
 		
 		
 		<!-- 代码示例 -->
-		<h2>我能够拿HTML干什么？</h2>
+		<h3>我能够拿HTML干什么？</h3>
 		<p>你可以用HTML编写网页，因为浏览器拿HTML语言来识别网页、描述网页。<br />
 		例子（涉及的将会在后面的章节学到）：<br />
 		<div>
@@ -71,6 +80,7 @@
 		</ul>
 		</p>
 		</section>
+		<nav style="float: center;"><a href="../index.html">首页</a></nav>
 		<nav style="float: right;"><a href="../class1/class1结构及基础标签.html">下一节：html的结构及基础标签</a></nav>
 		</div>
 		
