--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<h1>HTML帮助文档</h1>
 			<p>这里是首页，旨在为了导航而已（别问，问就是不会做效果XDD）<br />
 			选择一个你想要学的课程（左边导航栏）<br />
+			这个是托管在<a target= "_blank" href= "https://github.com">GitHub</a>的开源项目，点击<a href="https://github.com/AnXing233/AnXing233.github.io">此处</a>查看源代码
 			</p>
 		</div>
 	</body>
