--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -57,9 +57,9 @@
 				<li>开始和结束标签也被称为<b>开放标签</b>和<b>闭合标签</b></li>
 				</ul>
 				没错，就如&lt;html&gt;、&lt;head&gt;、&lt;body&gt;等等都是标签。<br />
-				开始标签和闭合标签缺一不可（这样就不会出现不必要的麻烦）<br />
+				开始标签和闭合标签缺一不可（这样就不会出现不必要的麻烦）<br /><br />
 				HTML标签的格式通常是： &lt;标签名&gt;元素&lt;/标签名&gt; <br /><br />
-				(PS:标签之间可嵌套（能加多少是多少，自己看的懂就行(bushi)）)
+				<q>(PS:标签之间可嵌套（能加多少是多少，自己看的懂就行(bushi)）)</q>
 			</p>
 			<h3>HTML的元素</h3>
 			<p>
