modified:   "class1/class1\347\273\223\346\236\204\345\217\212\345\237\272\347\241\200\346\240\207\347\255\276.html" 	renamed:    class2/class0.html -> "class2/class2\346\240\207\347\255\276.html" 	modified:   index.html

--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -44,7 +44,8 @@
 			<p>
 				我们可以看到，HTML主要由这几个部分组成(必须写的)：<br />
 				<img src="../img/class1/HTML代码介绍_1.png"/><br />
-				<q>PS:这里第一个写错了，&lt;!DOCTYPE html&gt;是声明这个网页是用html5制作的</q>
+				<q>PS:这里第一个写错了，&lt;!DOCTYPE html&gt;是声明这个网页是用html5制作的</q><br />
+				<b>备注：确保一定有个叫做“index.html”的文件，因为浏览器读取网址时必定先访问此文件</b>
 			</p>
 			
 			<h3>HTML标签</h3>
@@ -197,10 +198,11 @@
 				"ImginePath"指的是图片存放的位置，比如这里是在“img”文件夹里的“class1”文件夹里的“sample.jpg”文件<br />
 			</p>
 			</p>
+			<h3>作业：使用以上提及的标签写一篇对此教程的评价，不少于50字(图片可不加)</h3>
 		</section>
 		<nav style="float: left;"><a href="../class0/class0.html">上一节：前言</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
-		<nav style="float: right;"><a href="../class2/class0.html">下一节：</a></nav>
+		<nav style="float: right;"><a href="../class2/class2标签.html">下一节：HTML标签</a></nav>
 		</div>
 		
 	</body>
