--- a/class2/class2标签.html
+++ b/class2/class2标签.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>前言</title>
+		<title>给标签叠Buff--第二节：标签的属性</title>
 		<link rel="stylesheet" type="text/css" href="../css/text.css" />
 		<!-- 载入语法高亮脚本 -->
 		<link rel="stylesheet" href="../highlight/styles/atom-one-dark.min.css" type="text/css">
@@ -17,8 +17,14 @@
 		<!-- 主体 -->
 		<div>
 		<section>
+			<!-- 大标题 -->
+		<h1>Chapter 2：HTML属性</h1>
+			<!-- 主体 -->
+			
 		</section>
 		</div>
-		
+		<nav style="float: left;"><a href="../class1/class1结构及基础标签.html">上一节：HTML结构及基础标签</a></nav>
+		<nav style="float: center;"><a href="../index.html">首页</a></nav>
+		<nav style="float: right;"><a href="../class3/class0.html">下一节：</a></nav>
 	</body>
 </html>
