--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			<a target="_blank" href="">第四节</a><br />
 			<a target="_blank" href="">第五节</a><br />
 			<a target="_blank" href="">第六节</a><br />
+			<a target="_blank" href="">第七节</a><br />
+			<a target="_blank" href="">第八节</a><br />
+			<a target="_blank" href="">第九节</a><br />
+			<a target="_blank" href="">第十节</a><br />
 		</nav>
 		</div>
 		
@@ -26,6 +30,9 @@
 			<h1>HTML帮助文档</h1>
 			<p>这里是首页，旨在为了导航而已（别问，问就是不会做效果XDD）<br />
 			选择一个你想要学的课程（左边导航栏）<br />
+			友情链接：<br />
+			<a href="https://developer.mozilla.org/zh-CN/docs/Learn/Getting_started_with_the_web">MDN Web Docs</a><br />
+			<a href="https://www.w3school.com.cn/h.asp">w3chool</a><br /><br />
 			这个是托管在<a target= "_blank" href= "https://github.com">GitHub</a>的开源项目，点击<a href="https://github.com/AnXing233/AnXing233.github.io">此处</a>查看源代码
 			</p>
 		</div>
