--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -67,7 +67,7 @@
 				HTML网页是由元素定义的
 				<hr />
 				HTML 元素指的是从开始标签（start tag）到结束标签（end tag）的所有代码。<br /><br />
-				<table border="1" style="border-color: white;">
+				<table style="border-color: white;">
 					<tr style="background-color: black; ">
 						<th>开始标签</th>
 						<th>元素内容</th>
