--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -40,12 +40,13 @@
 			</p>
 			
 			
-			<h3>HTML网页结构</h3>
+			<h3>HTML文件结构</h3>
 			<p>
 				我们可以看到，HTML主要由这几个部分组成(必须写的)：<br />
 				<img src="../img/class1/HTML代码介绍_1.png"/><br />
-				<q>PS:这里第一个写错了，&lt;!DOCTYPE html&gt;是声明这个网页是用html5制作的</q><br />
-				<b>备注：确保一定有个叫做“index.html”的文件，因为浏览器读取网址时必定先访问此文件</b>
+				<q>PS:这里第一个写错了，&lt;!DOCTYPE html&gt;是声明这个网页是用html5制作的</q><br /><br />
+
+				注意：网站必须拥有的文件是”index.html“（通常都会有此文件来让浏览器读取）
 			</p>
 			
 			<h3>HTML标签</h3>
