测试git bash，顺便写了下class2

--- a/class2/class2标签属性.html
+++ b/class2/class2标签属性.html
@@ -20,7 +20,10 @@
 			<!-- 大标题 -->
 		<h1>Chapter 2：HTML属性</h1>
 			<!-- 主体 -->
-			
+			<p>
+			当你在完成上次的作业你可能会发现：”这些文段好像都不能改变位置捏！而我想要改变位置，怎么办？“<br />
+			不慌，我们下面学习的”标签属性“会帮到你！
+			</p>
 		</section>
 		</div>
 		<nav style="float: left;"><a href="../class1/class1结构及基础标签.html">上一节：HTML结构及基础标签</a></nav>
