完成了第二节导航（淦改名没写好）

--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -203,7 +203,7 @@
 		</section>
 		<nav style="float: left;"><a href="../class0/class0.html">上一节：前言</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
-		<nav style="float: right;"><a href="../class2/class2标签.html">下一节：HTML标签</a></nav>
+		<nav style="float: right;"><a href="../class2/class2标签属性.html">下一节：HTML标签</a></nav>
 		</div>
 		
 	</body>
