暂时完成class2，导航已加入

--- a/class1/class1结构及基础标签.html
+++ b/class1/class1结构及基础标签.html
@@ -199,7 +199,7 @@
 				"ImginePath"指的是图片存放的位置，比如这里是在“img”文件夹里的“class1”文件夹里的“sample.jpg”文件<br />
 			</p>
 			</p>
-			<h3>作业：使用以上提及的标签写一篇对此教程的评价，不少于50字(图片可不加)</h3>
+			<h3>作业：使用以上提及的标签写一篇对此教程的评价，不少于50字<del>(图片可不加)</del></h3>
 		</section>
 		<nav style="float: left;"><a href="../class0/class0.html">上一节：前言</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
