--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<nav>
 			<a target="_blank" href="class0/class0.html">前言</a><br />
 			<a target="_blank" href="class1/class1结构及基础标签.html">第一节：html结构及基础标签</a><br />
-			<a target="_blank" href="">第二节</a><br />
+			<a target="_blank" href="class2/class2标签属性.html">给标签叠Buff--第二节：标签的属性</a><br />
 			<a target="_blank" href="">第三节</a><br />
 			<a target="_blank" href="">第四节</a><br />
 			<a target="_blank" href="">第五节</a><br />
@@ -30,7 +30,7 @@
 			<h1>HTML帮助文档</h1>
 			<p>这里是首页，旨在为了导航而已（别问，问就是不会做效果XDD）<br />
 			选择一个你想要学的课程（左边导航栏）<br />
-			友情链接：<br />
+			友情链接(参考手册)：<br />
 			<a href="https://developer.mozilla.org/zh-CN/docs/Learn/Getting_started_with_the_web">MDN Web Docs</a><br />
 			<a href="https://www.w3school.com.cn/h.asp">w3chool</a><br /><br />
 			这个是托管在<a target= "_blank" href= "https://github.com">GitHub</a>的开源项目，点击<a href="https://github.com/AnXing233/AnXing233.github.io">此处</a>查看源代码
