--- a/class3/class3文段标签+a标签.html
+++ b/class3/class3文段标签+a标签.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>前言</title>
+		<title>第三节：文段标签+超链接标签</title>
 		<link rel="stylesheet" type="text/css" href="../css/text.css" />
 		<!-- 载入语法高亮脚本 -->
-		<link rel="stylesheet" href="../highlight/styles/atom-one-dark.min.css" type="text/css">
+		<link rel="stylesheet" href="../highlight/styles/stackoverflow-dark.min.css" type="text/css">
 		<script src="../highlight/languages/haml.min.js"></script>
 		<script src="../highlight/highlight.min.js"></script>
 	</head>
@@ -18,6 +18,9 @@
 		<div>
 		<section>
 		</section>
+		<nav style="float: left;"><a href="../class2/class2标签属性.html">上一节：HTML标签属性</a></nav>
+		<nav style="float: center;"><a href="../index.html">首页</a></nav>
+		<nav style="float: right;"><a href="../class4/class0.html">下一节：</a></nav>
 		</div>
 		
 	</body>
