--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a target="_blank" href="class0/class0.html">前言</a><br />
 			<a target="_blank" href="class1/class1结构及基础标签.html">第一节：html结构及基础标签</a><br />
 			<a target="_blank" href="class2/class2标签属性.html">给标签叠Buff--第二节：标签的属性</a><br />
-			<a target="_blank" href="">第三节</a><br />
+			<a target="_blank" href="class3\class3文段标签+a标签.html">第三节</a><br />
 			<a target="_blank" href="">第四节</a><br />
 			<a target="_blank" href="">第五节</a><br />
 			<a target="_blank" href="">第六节</a><br />
