--- a/class2/class2标签属性.html
+++ b/class2/class2标签属性.html
@@ -5,7 +5,7 @@
 		<title>给标签叠Buff--第二节：标签的属性</title>
 		<link rel="stylesheet" type="text/css" href="../css/text.css" />
 		<!-- 载入语法高亮脚本 -->
-		<link rel="stylesheet" href="../highlight/styles/atom-one-dark.min.css" type="text/css">
+		<link rel="stylesheet" href="../highlight/styles/stackoverflow-dark.min.css" type="text/css">
 		<script src="../highlight/languages/haml.min.js"></script>
 		<script src="../highlight/highlight.min.js"></script>
 	</head>
@@ -72,12 +72,13 @@
 				<img src="../img/class2/实践6.png" alt=""/><br />
 				(由于在线编辑不会保存，请自行新建文件多多修改深入理解（怪我不会做在线编辑器qwq）)<br />
 				<q>PS:bgcolor属性是修改背景颜色，bg=BackGround</q>
+				<code>a</code>
 
 			</p>
 		</section>
 		</div>
 		<nav style="float: left;"><a href="../class1/class1结构及基础标签.html">上一节：HTML结构及基础标签</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
-		<nav style="float: right;"><a href="../class3/class0.html">下一节：</a></nav>
+		<nav style="float: right;"><a href="../class3/class3文段标签+a标签.html">下一节：文段标签+超链接标签</a></nav>
 	</body>
 </html>
