--- a/class3/class3文段标签+a标签.html
+++ b/class3/class3文段标签+a标签.html
@@ -17,6 +17,88 @@
 		<!-- 主体 -->
 		<div>
 		<section>
+			<!-- 大标题 -->
+			<h1>Chapter 3: 文段标签+超链接标签</h1>
+			<!-- 主体 -->
+			<p>其实这个文段标签没什么好说的，但是总得复习下，对吧;) <br /> </p>
+			<hr />
+			<h3>HTML标题</h3>    <!--标题标签-->
+			<P>
+				标题（Heading）是通过 <code>&lt;h1&gt;</code> - <code>&lt;h6&gt;</code> 等标签进行定义的。<br />
+				<code>&lt;h1&gt;</code> 定义最大的标题。<code>&lt;h6&gt;</code> 定义最小的标题。<br />
+				<br />
+				实例:
+				<pre>
+					<code>
+&lt;h1&gt;标题1&lt;/h1&gt;
+&lt;h2&gt;标题2&lt;/h2&gt;
+&lt;h3&gt;标题3&lt;/h3&gt;
+					</code>
+				</pre>
+				点击<a target="_blank" href="test1.html">此处</a>查看效果！
+			</p>
+			<h4>标题很重要</h4>
+			<p>
+请确保将 HTML heading 标签只用于标题。不要仅仅是为了产生粗体或大号的文本而使用标题。<br />
+搜索引擎使用标题为您的网页的结构和内容编制索引。<br />
+因为用户可以通过标题来快速浏览您的网页，所以用标题来呈现文档结构是很重要的。<br />
+应该将 h1 用作主标题（最重要的），其后是 h2（次重要的），再其次是 h3，以此类推。<br />
+			</p>
+			<hr />
+
+
+			<h3>HTML水平线</h3>      <!--水平线-->
+			<p>
+				水平线是通过&lt;hr /&gt;标签来进行定义的<br />
+				效果就像你刚刚看这节的标题前[doge] <br />
+				<br />
+				实例： <br />
+				<pre>
+					<code>
+&lt;h1&gt;大标题&lt;/h1&gt;
+&lt;hr /&gt;
+&lt;p&gt;文段&lt;/p&gt;
+					</code>
+				</pre>
+				点击<a href="test2.html">此处</a>查看效果！ <br />
+				<br />
+				水平线不要乱用力！用多了会很乱的力！[doge] <br />
+			</p>
+
+				<h3>HTML注释</h3>     <!--就是我哈哈哈哈-->
+				<p>使用注释会提高代码的可读性，就像你看个很难懂的理论会在文章旁边用注释说明怎么去理解这个之类的。。。 <br />
+					总之，注释你看得懂就行[doge] <br />
+					<br />
+					实例： <br />
+					<pre>
+						<code>
+&lt;!--你是一个一个注释啊啊啊啊啊啊啊啊啊--&gt;
+						</code>
+					</pre>
+					注意这个注释的书写格式： <br />
+					内容为空的是<code>&lt;!----&gt;</code> <br />
+					必须在两条横杠(-)之后写，后面的两条横杠也不能动(简单说就是四个横杠注释夹中间（确信）) <br />
+				</p>
+
+				<h3>HTML引用</h3>      <!--引用-->
+				<p>
+					引用是什么不多讲，这里具体讲标签的使用 <br />
+					<br />
+
+					<h4>短的引用</h4>
+					使用&lt;q&gt;标签定义短的引用，被&lt;q&gt;标签包围住的元素会加上引号 <br />
+					<br />
+					实例： <br />
+				
+					<pre>
+						<code>
+&lt;p&gt;鲁迅曾说过:&lt;q&gt;时间就像海绵里的水，只要愿挤，总还是有的。&lt;/q&gt;&lt;/p&gt;
+						</code>
+					</pre>
+				</p>
+				点击<a href="test3.html">此处</a>查看效果！
+
+			
 		</section>
 		<nav style="float: left;"><a href="../class2/class2标签属性.html">上一节：HTML标签属性</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
