--- a/class3/class3文段标签+a标签.html
+++ b/class3/class3文段标签+a标签.html
@@ -23,7 +23,7 @@
 			<p>其实这个文段标签没什么好说的，但是总得复习下，对吧;) <br /> </p>
 			<hr />
 			<h3>HTML标题</h3>    <!--标题标签-->
-			<P>
+			<p>
 				标题（Heading）是通过 <code>&lt;h1&gt;</code> - <code>&lt;h6&gt;</code> 等标签进行定义的。<br />
 				<code>&lt;h1&gt;</code> 定义最大的标题。<code>&lt;h6&gt;</code> 定义最小的标题。<br />
 				<br />
@@ -60,7 +60,7 @@
 &lt;p&gt;文段&lt;/p&gt;
 					</code>
 				</pre>
-				点击<a href="test2.html">此处</a>查看效果！ <br />
+				点击<a target="_blank" href="test2.html">此处</a>查看效果！ <br />
 				<br />
 				水平线不要乱用力！用多了会很乱的力！[doge] <br />
 			</p>
@@ -85,7 +85,7 @@
 					引用是什么不多讲，这里具体讲标签的使用 <br />
 					<br />
 
-					<h4>短的引用</h4>
+					<h4>短的引用</h4>     <!--q标签-->
 					使用&lt;q&gt;标签定义短的引用，被&lt;q&gt;标签包围住的元素会加上引号 <br />
 					<br />
 					实例： <br />
@@ -95,8 +95,132 @@
 &lt;p&gt;鲁迅曾说过:&lt;q&gt;时间就像海绵里的水，只要愿挤，总还是有的。&lt;/q&gt;&lt;/p&gt;
 						</code>
 					</pre>
+					
+					点击<a target="_blank" href="test3.html">此处</a>查看效果！ <br /> <br />
+
+					<h4>长的引用</h4>    <!--blockquote标签-->
+					<p>
+						使用&lt;blockquote&gt;定义长的引用，被&lt;blockquote&gt;标签包围住的元素会进行缩进处理 <br />
+						<br />
+						实例： <br />
+
+						<pre>
+							<code>
+&lt;p&gt;万维网的概念：&lt;/p&gt;
+&lt;blockquote cite="https://baike.baidu.com/item/www/109924"&gt;
+WWW (World Wide Web，万维网)是存储在Internet计算机中、数量巨大的文档的集合。
+这些文档称为页面，它是一种超文本(Hypertext)信息，可以用于描述超媒体。
+文本、图形、视频、音频等多媒体，称为超媒体(Hypermedia)。
+Web上的信息是由彼此关联的文档组成的，而使其连接在一起的是超链接(Hyperlink)。
+&lt;/blockquote&gt;
+							</code>
+						</pre>
+						<p>点击<a target="_blank" href="test4.html">此处</a>查看效果！</p>
+						如果说的没错的话，缩进就像你每一行加了Tab键一样（Tab键默认空出4个空格）
+					</p>
+
+					<h4>缩写、省略词</h4>     <!--abbr标签-->
+					<p>
+						使用&lt;abbr&gt;标签定义一个词的缩写或首字母省略语 <br />
+						对缩写进行标记能够为浏览器、翻译系统以及搜索引擎提供有用的信息。 <br />
+						用法： &lt;abbr title= "全称"&gt;缩写&lt;/abbr&gt; (简单讲就是使用title属性把全程写出来) <br />
+						<br />
+						实例：<br />
+						<pre>
+							<code>
+&lt;blockquote&gt;
+&lt;abbr title= "Adobe Photoshop"&gt;PS&lt;/abbr&gt;是由Adobe Systems开发和发行的图像处理软件。
+Photoshop主要处理以像素所构成的数字图像。
+使用其众多的编修与绘图工具，可以有效地进行图片编辑和创造工作。
+PS 有很多功能，在图像、图形、文字、视频、出版等各方面都有涉及。
+&lt;/blockquote&gt;
+							</code>
+						</pre>
+						<p>点击<a target="_blank" href="test5.html">此处</a>查看效果! 
+							(鼠标悬停在有下划线的词的时候显示全称)</p>
+					</p>
+
+					<h4>著作标题</h4>   <!--cite标签-->
+					<p>
+						HTML &lt;cite&gt; 元素定义著作的标题。 <br />
+						浏览器通常会以斜体显示 &lt;cite&gt; 元素。 <br />
+						<br />
+						实例： <br />
+						<pre>
+							<code>
+&lt;p&gt;《汤姆·索亚历险记》（&lt;cite&gt;The Adventures of Tom Sawyer&lt;/cite&gt;）
+是美国小说家马克·吐温1876年发表的长篇小说。&lt;/p&gt;
+							</code>
+						</pre>
+						显示的效果：
+						<p>《汤姆·索亚历险记》（<cite>The Adventures of Tom Sawyer</cite>）
+						是美国小说家马克·吐温1876年发表的长篇小说。</p>
+					</p>
+					<q>还有&lt;address&gt;和&lt;dfn&gt;标签因为该节篇幅过长，不多描述，有兴趣可以查看
+						<a href="https://www.w3school.com.cn/html/html_quotation_elements.asp">此处</a>（虽然这两个标签显示的都是斜体）</q>
 				</p>
-				点击<a href="test3.html">此处</a>查看效果！
+				<h3>超链接标签</h3>
+				<p>
+					超链接可以是一个字，一个词，一张图，可以通过点击它来跳转到新的网页或网页的某个地方。 <br />
+					当您把鼠标指针移动到网页中的某个链接上时，箭头会变为一只小手。 <br />
+					怎么创建链接？使用 &lt;a&gt; 标签！ <br />
+					<br />
+					简单的食用方法： <br />
+					<img src= "../img/class3/超链接标准格式.png" alt= "" title= "&lt;a href= “链接”&gt;文本&lt;/a&gt;"/> <br />
+					实例：<br />
+					<pre>
+						<code>
+&lt;a href= "https://www.bilibili.com/"&gt;哔哩哔哩 (゜-゜)つロ 干杯~-bilibili&lt;/a&gt;							
+						</code>
+					</pre>
+					你要问效果怎样？那就点<a href="https://www.bilibili.com/">这里</a>啊！(doge) <br />
+					那你可能会问了：这怎么只能在当前页面跳转啊！我要让它跳转到新的标签页啊啊啊啊！！！ <br />
+					莫急，急也没有用，我是急急国王<img align="middle" width="10%" height="10%" src="../img/class3/急急国王.jpg" alt=""/>
+					<br />
+
+					<h4>target属性</h4>
+					<p>
+						使用target属性可以改变它跳转的方式 <br />
+						属性值只讲两个：新建空白页和在此页面跳转 <br />
+						新建空白页是"_blank"，在此页面跳转是"_self"  。分别对应“空白”与“自身”（确信）<br />
+						<br />
+						使用： <br />
+						<pre>
+							<code>
+&lt;a target="_blank" href= "http://bbs.1212321.com/"&gt;Bvn游戏论坛&lt;/a&gt;      &lt;--新建空白页--&gt;
+&lt;a target="_self" href= "http://bbs.1212321.com/"&gt;Bvn游戏论坛&lt;/a&gt;      &lt;--当前页面跳转--&gt;
+							</code>
+						</pre>
+						<a target="_blank" href= "http://bbs.1212321.com/">第一种</a> <br />
+						<a target="_self" href= "http://bbs.1212321.com/">第二种</a>
+					</p>
+
+					<h4>name属性</h4>
+					<p>name属性规定这个“锚”的名称。 <br />
+						没错，这个a标签的正规叫法叫做“锚”，因为它不仅仅是跳转链接，它也可以给它一个名字（或者叫ID，就像学校给予我们的学号一样），来实现这个网页位置的跳转(类似书签的功能？) <br />
+						<br />
+						具体是怎样的？且听我娓娓道来： <br />
+						<br />
+						食用方法：
+						<pre>
+							<code>
+&lt;a name="value"&gt;首页...什么的&lt;/a&gt;
+							</code>
+						</pre>
+						现在我们给这段文本赋予了一个名字（其实名字自己随便取），如果我们把这段文本放在网页顶部，看得很下时我们想“返回顶部”，那么我们可以这样：
+						<br />
+						<pre>
+							<code>
+&lt;a href="#value"&gt;返回顶部&lt;/a&gt;
+							</code>
+						</pre>
+						这样，我们点击”返回顶部“就可以回到顶部啦 <br />
+						这里个实例，点击<a target="_blank" href="test7.html">这里</a>查看
+					</p>
+					我们也可以用 a 标签跳转这个网站的某个位置，比如点击<a target="_blank" href="../img/class1/sample.jpg">这里</a>跳转到第一节示例网页里的"sample.jpg"(具体的路径依自己存放的位置而定) <br />
+					(下一节讲解路径问题)
+				</p>
+				<h3>作业：使用以上标签至少一次，且使用 a 标签在最前的一个词设置一个name，然后在最后的一个词跳转到被赋予name的位置（不知道会不会太绕了）</h3>
 
 			
 		</section>
