--- a/class2/class2标签属性.html
+++ b/class2/class2标签属性.html
@@ -26,7 +26,7 @@
 			</p>
 
 			<h3>HTML属性结构</h3>
-			<p>在上一节我们知道，我们在 &lt;img /&gt; 标签里写入了一个属性：src= "ImginePath" <br />
+			<p>在上一节我们知道，我们在 &lt;img /&gt; 标签里写入了一个：src= "ImginePath" <br />
 			这个就是一种属性。<br />
 			拿回之前在class1插入的图片的位置，我们可以知道，标签属性的形式是这样：<br />
 
