awa还没做完提交亿下

--- a/class4/class4插入媒体.html
+++ b/class4/class4插入媒体.html
@@ -73,15 +73,28 @@
 					</ul>
 					<q>(由于说不清楚是什么效果，请点击<a href="imgine.html" target="_blank">此处</a>查看)</q>
 				</p>
+
 				<p>
 				<h4>title属性</h4>
 				<p>这个属性就是把鼠标悬停在图像那里，显示的文字就是title属性里的属性值（文字）</p>
 				<p>例如：看看这个！把鼠标悬停在下面的图像看看！如果没出错的话，显示的文字是“热词系列_知识增加”</p>
 				<p><img src= "../img/class4/cat.png" alt= "" title= "热词系列_知识增加"/></p>
 				</p>
-
-
 			</div>
+			<div>
+				<h3>插入音频</h3>
+				<p>&lt;audio&gt; 标签可以插入音频</p>
+				<p>实例：</p>
+				<pre>
+					<code>
+&lt;audio src= "URL" controls= "controls" autoplay= "autoplay"&gt;text&lt;/audio&gt;
+					</code>
+				</pre>
+				<p>如下所示(没有设置自动播放)：</p>
+				<img src= "../img/class4/imgine.jpg" alt= "" title= "Levels - Avicii" width="10%" height= "10%"/>
+				<audio src="../media/class4/Levels - Avicii.mp3" controls="controls">Levels - Avicii</audio>
+				<p>(是谁应该都知道吧...)</p>
+		</div>
 		</section>
 		<nav style="float: left;"><a href="../class3/class3文段标签+a标签.html">上一节：文段标签+超链接标签</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
