修改了一个字（

--- a/class4/class4插入媒体.html
+++ b/class4/class4插入媒体.html
@@ -98,7 +98,7 @@
 					<li>controls: 显示控件（播放，下载，播放速度什么的）(不开=废了)</li>
 					<li>autoplay: 自动播放（加了的话一打开网页就炸耳(bushi)）</li>
 					<li>loop: 俗称洗脑循环</li>
-					<li>(其实controls,autoplay,loop都可以不用写后面的属性的是，但最好写写)</li>
+					<li>(其实controls,autoplay,loop都可以不用写后面的属性的，但最好写写)</li>
 				</ul>
 				<br />
 				<p>效果如下所示(没有设置自动播放)(注意音量)：</p>
