添加不是很看得见的阴影， 导航修复， ch5还没做

--- a/class4/class4插入媒体.html
+++ b/class4/class4插入媒体.html
@@ -198,12 +198,12 @@
 			<div align="middle">
 			<q>YouTube的视频在国内被墙了，所以需要魔法（确信）</q>
 			</div>
-			
+
 		</div>
 		</section>
 		<nav style="float: left;"><a href="../class3/class3文段标签+a标签.html">上一节：文段标签+超链接标签</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
-		<nav style="float: right;"><a href="../class5/class0.html">下一节：</a></nav>
+		<nav style="float: right;"><a href="../class5/class5html与css.html">下一节：html与css</a></nav>
 		</div>
 		
 	</body>
