--- a/class5/class5html与css.html
+++ b/class5/class5html与css.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>前言</title>
+		<title>第五节：HTML与css、块、类、id、内联框架</title>
 		<link rel="stylesheet" type="text/css" href="../css/text.css" />
 		<!-- 载入语法高亮脚本 -->
 		<link rel="stylesheet" href="../highlight/styles/atom-one-dark.min.css" type="text/css">
