--- a/class5/class5html与css.html
+++ b/class5/class5html与css.html
@@ -142,6 +142,7 @@
 			<p>关于块级元素和内联元素的理解：</p>
 			<img src= "../img/class5/块级内联元素.png" alt= "" title= "" border="1"/>
 			<hr />
+
 			<h3>&lt;div&gt; 元素</h3>
 			<p>HTML &lt;div&gt; 元素是块级元素，它是可用于组合其他 HTML 元素的容器。</p>
 			<P>&lt;div&gt; 元素没有特定的含义。除此之外，由于它属于块级元素，浏览器会在其前后显示折行。</P>		
@@ -190,14 +191,74 @@
 				</pre>
 				<p>效果如下：</p>
 
-				<div border="1" style="border: 2px; border-style: solid; float: left;" >
+				<div align="middle" style="float: center;">
+				<div border="1" style="border: 2px; border-style: solid;" >
 				<p>今天是多美好的一天啊。<br />
 					小鸟在歌唱，鲜花在绽放。<br />
 					在这样的一天里，像你这样的孩子...<br />
 					<span style="color: red;">应 当 在 地 狱 里 焚 烧 。</span>
 				</p>
 			</div>
-			
+				</div>
+				<hr />
+
+				<div>
+					<h3>HTML 类</h3>
+					<p>对 HTML 进行分类（设置类），使我们能够为元素的类定义 CSS 样式。</p>
+					<p>为相同的类设置相同的样式，或者为不同的类设置不同的样式。</p>
+					<p>实例：</p>
+					<pre>
+						<code>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+	&lt;meta charset="UTF-8"&gt;
+	&lt;title&gt;Document&lt;/title&gt;
+	&lt;style&gt;
+		/*设置一个类，可以用于多个标签*/
+		.class_name {
+			color: white;
+			background-color: grey;
+			padding: 20px;
+			margin: 20px;
+			float: left;
+		}
+	&lt;/style&gt;
+&lt;/head&gt;
+&lt;body&gt;
+		&lt;!--随便写写--&gt;
+	&lt;div class="class_name"&gt;
+		&lt;h1&gt;headingggggg&lt;/h1&gt;
+		&lt;p&gt;飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗
+			飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗
+			飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗
+			飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗飞煞祖宗
+		&lt;/p&gt;
+	&lt;/div&gt;
+	&lt;div class="class_name"&gt;
+		&lt;h2&gt;heading&lt;/h2&gt;
+		&lt;p&gt;我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心
+			我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心
+			我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心
+			我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心我练功发自真心
+		&lt;/p&gt;
+	&lt;/div&gt;
+	&lt;div class="class_name"&gt;
+		&lt;h3&gt;titleeeeeeeee&lt;/h3&gt;
+		&lt;p&gt;囸囸囸囸囸囸囸
+			囸囸囸囸囸囸囸
+			囸囸囸囸囸囸囸
+			囸囸囸囸囸囸囸
+		&lt;/p&gt;
+	&lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code>
+					</pre>
+					<p>效果可在<a target="_blank" href="test3.html">此处</a>查看！</p>
+					<p>这里说明下padding和margin属性：</p>
+					<img src= "../img/class5/padding与margin.png" alt= "" title= "" width="100%" height="100%"/>
+				</div>
 		</section>
 		</div>
 		
