--- a/class5/class5html与css.html
+++ b/class5/class5html与css.html
@@ -353,7 +353,7 @@
 		</section>
 		<nav style="float: left;"><a href="../class5/class5html与css.html">上一节：插入媒体</a></nav>
 		<nav style="float: center;"><a href="../index.html">首页</a></nav>
-		<nav style="float: right;"><a href="../class6/class0.html">下一节：</a></nav>
+		<nav style="float: right;"><a href="../class6/class6HTML与JavaScript.html">下一节：HTML与JavaScript</a></nav>
 		</div>
 		
 	</body>
