--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<a target="_blank" href="class0/class0.html">前言</a><br />
 			<a target="_blank" href="class1/class1结构及基础标签.html">第一节：html结构及基础标签</a><br />
 			<a target="_blank" href="class2/class2标签属性.html">给标签叠Buff--第二节：标签的属性</a><br />
-			<a target="_blank" href="class3\class3文段标签+a标签.html">第三节：段落标签+超链接标签</a><br />
+			<a target="_blank" href="class3/class3文段标签+a标签.html">第三节：段落标签+超链接标签</a><br />
 			<a target="_blank" href="class4/class4插入媒体.html">第四节：插入媒体+HTML路径</a><br />
 			<a target="_blank" href="class5/class5html与css.html">第五节：HTML与css、块、类、id、内联框架</a><br />
-			<a target="_blank" href="">第六节</a><br />
+			<a target="_blank" href="class6/class6HTML与JavaScript.html">第六节：HTML与JavaScript、框架</a><br />
 			<a target="_blank" href="">第七节</a><br />
 			<a target="_blank" href="">第八节</a><br />
 			<a target="_blank" href="">第九节</a><br />
